--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
-    "@astrojs/tailwind": "^6.0.2",
-    "astro": "^5.16.9",
-    "tailwind": "^4.0.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.17.2",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/bun": "^1.3.5",
-    "prettier": "^3.7.4",
+    "@types/bun": "^1.3.9",
+    "prettier": "^3.8.1",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.2"
   }
